[tool.poetry]
name = "meetnotes_questions"
version = "0.1.0"
description = "GPT4 plugin for asking intelligent questions on live meeting notes"
authors = ["Joseph Turian <lastname@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pypa/meetnotes-questions"
repository = "https://github.com/pypa/meetnotes-questions"
documentation = "https://github.com/pypa/meetnotes-questions"
keywords = ["sample", "setuptools", "development"]
packages = [
    { include = "meetnotes_questions", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
meetnotes-questions = "*"
python-dotenv = "^0.19.0"
watchdog = "^2.1.6"
tiktoken = "^1.0.0"
openai = "^0.27.0"

[tool.poetry.dev-dependencies]
check-manifest = "*"
coverage = "*"

[build-system]
#requires = ["poetry-core>=1.0.0"]
requires = ["setuptools", "wheel"]
#build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
meetnotes_questions = 'meetnotes_questions.__main__:main'
